HW2 complete according to task with screens and output data