@@ -34,6 +34,18 @@ for n in "${FILE_NAMES_ARRAY[@]}"; do
     echo "Coping ${n} from local docker FS to HDFS complete"
 done
 
+echo "Installing java8 ..."
+cd /root
+curl -LO 'http://download.oracle.com/otn-pub/java/jdk/8u91-b14/jdk-8u91-linux-x64.rpm' -H 'Cookie: oraclelicense=accept-securebackup-cookie'
+rpm -i jdk-8u91-linux-x64.rpm
+echo "Installing java8 complete"
+
+cd $HADOOP_PREFIX
+#export HADOOP_CLIENT_OPTS="--Xms8g --Xmx8g --Xmn2g  -XX:PermSize=64M -XX:MaxPermSize=256M -XX:-OmitStackTraceInFastThrow -XX:SurvivorRatio=2 -XX:+UseG1GC -XX:NewSize=4g -XX:MaxNewSize=5g -XX:ConcGCThreads -XX:+UseStringDeduplication"
+#-XX:+UseG1GC -XX:+UseStringDeduplication
+#-Xmn4g
+# -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark
+export HADOOP_CLIENT_OPTS="-Xmx4g -Xmn1g -Xms4g $HADOOP_CLIENT_OPTS"
 echo "Running a job ..."
 bin/hadoop jar /opt/homework-2.jar MultipleFilesProcessor hdfs://$HOSTNAME:9000/$INPUT_JOB_PATH/
 echo "MR job has finished"
